hard coding in version number. Need to automate this for future versions

--- a/h2o-docs/src/front/index.html
+++ b/h2o-docs/src/front/index.html
@@ -98,6 +98,7 @@
       <div class="column-wrapper">
         <div class="col-two left text-left">
           <h4 class="underline-yellow wow wefadeInUp">H2O-3</h4>
+          <h5 style="padding-top: 10px;">Version 3.30.0.5</h5>
           <h6 class="wow wefadeInUp">The H2O open source platform works with R, Python, an Scala on Hadoop/Yarn, Spark, or your laptop</h6>
         </div>
 
