--- a/h2o-dist/index.html
+++ b/h2o-dist/index.html
@@ -679,7 +679,7 @@ dependencies {</br>
             <div id="quickstart-kubernetes" style="display:none">
 
                 <h2>Setup H<sub>2</sub>O on Kubernetes using Helm</h2>
-                    <p></p><a href="https://helm.sh/" target="_blank">Helm</a> can be used to deploy H2O into a kubernetes cluster. Helm requires the KUBECONFIG environment variable to be set up properly, or stating the kubeconfig destination explicitly. Please refer to Helm's documentation
+                    <p><a href="https://helm.sh/" target="_blank">Helm</a> can be used to deploy H2O into a kubernetes cluster. Helm requires the KUBECONFIG environment variable to be set up properly, or stating the kubeconfig destination explicitly. Please refer to Helm's documentation
                     for further information.</p>
                 <p class="terminal" id="to_copy11">
 helm repo add h2o https://charts.h2o.ai --version SUBST_PROJECT_VERSION
